Fixed time bug. Updated dataset paradigm to use collate_fn

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting Haydn\n",
-      "Starting Beethoven\n",
-      "Starting Cambini\n",
-      "Starting Schubert\n",
       "Starting Faure\n",
-      "Starting Brahms\n",
-      "Starting Dvorak\n",
+      "Starting Schubert\n",
+      "Starting Cambini\n",
+      "Starting Ravel\n",
       "Starting Bach\n",
+      "Starting Dvorak\n",
+      "Starting Brahms\n",
       "Starting Mozart\n",
-      "Starting Ravel\n"
+      "Starting Beethoven\n",
+      "Starting Haydn\n"
      ]
     }
    ],
@@ -92,21 +92,27 @@
     "    assert(0 <= time_shift and time_shift < num_time_shifts)\n",
     "    return 2*num_notes + num_velocities + time_shift\n",
     "\n",
-    "# data_append_time_shift: appends a time shift event to the data array. If the time\n",
-    "# shift is too large, split it into multiple small time shifts\n",
+    "# append_time_shift: appends a time shift event to the data array. If the time\n",
+    "# shift is too large, split it into multiple small time shifts. Also appends\n",
+    "# time events\n",
     "# ARGUMENTS\n",
     "# data: time shift events will be appended to this list\n",
+    "# times: times of events will be appended to this list\n",
+    "# time: time of first event\n",
     "# time_shift: amount of time to shift\n",
-    "def data_append_time_shift(data, time_shift):\n",
+    "def append_time_shift(data, times, time, time_shift):\n",
     "    time_shift = quantize_time_shift(time_shift)\n",
     "    \n",
-    "    # Split large  time shifts into multiple small time shifts\n",
+    "    # Split large time shifts into multiple small time shifts\n",
     "    while (time_shift >= num_time_shifts):\n",
     "        data.append(time_shift_event(num_time_shifts - 1))\n",
+    "        times.append(time)\n",
+    "        time += min_time_shift*num_time_shifts\n",
     "        time_shift -= (num_time_shifts - 1)\n",
     "\n",
     "    if (time_shift >= 0):\n",
     "        data.append(time_shift_event(time_shift))\n",
+    "        times.append(time)\n",
     "    \n",
     "base_path = 'musicnet_midis/'\n",
     "\n",
@@ -152,15 +158,14 @@
     "            \n",
     "                # We need to turn off a note\n",
     "                while off_queue and note.start > off_queue[0][0]:\n",
-    "                    data_append_time_shift(data[i], off_queue[0][0] - time)\n",
+    "                    append_time_shift(data[i], times[i], time, off_queue[0][0] - time)\n",
     "                    data[i].append(note_off_event(off_queue[0][1]))\n",
     "                    time = off_queue[0][0]\n",
     "                    times[i].append(time)\n",
     "                    heapq.heappop(off_queue)\n",
     "                    \n",
     "                # Time shift until we reach the start of this note\n",
-    "                data_append_time_shift(data[i], note.start - time)\n",
-    "                times[i].append(time)\n",
+    "                append_time_shift(data[i], times[i], time, note.start - time)\n",
     "                time = note.start\n",
     "                    \n",
     "                velocity = quantize_velocity(note.velocity)\n",
@@ -179,7 +184,7 @@
     "                if n == len(instrument.notes) - 1:\n",
     "                    # No more notes left. Flush the off queue\n",
     "                    while off_queue:\n",
-    "                        data_append_time_shift(data[i], off_queue[0][0] - time)\n",
+    "                        append_time_shift(data[i], times[i], time, off_queue[0][0] - time)\n",
     "                        data[i].append(note_off_event(off_queue[0][1]))\n",
     "                        time = off_queue[0][0]\n",
     "                        times[i].append(time)\n",
@@ -187,6 +192,8 @@
     "                    \n",
     "            data[i] = np.array(data[i])\n",
     "            times[i] = np.array(times[i])\n",
+    "            \n",
+    "            assert(len(times[i]) == len(data[i]))\n",
     "        \n",
     "        np.save('preprocessed_data/recording' + str(fnum) + '.npy', data)\n",
     "        np.save('preprocessed_data/times' + str(fnum) + '.npy', times)\n",
@@ -260,14 +267,14 @@
     "            \n",
     "        # We need to turn off a note\n",
     "        while off_queue and note.start > off_queue[0][0]:\n",
-    "            data_append_time_shift(data[i], off_queue[0][0] - time)\n",
+    "            append_time_shift(data[i], times[i], time, off_queue[0][0] - time)\n",
     "            data[i].append(note_off_event(off_queue[0][1]))\n",
     "            time = off_queue[0][0]\n",
     "            times[i].append(time)\n",
     "            heapq.heappop(off_queue)\n",
     "\n",
     "        # Time shift until we reach the start of this note\n",
-    "        data_append_time_shift(data[i], note.start - time)\n",
+    "        append_time_shift(data[i], times[i], time, note.start - time)\n",
     "        times[i].append(time)\n",
     "        time = note.start\n",
     "\n",
@@ -289,7 +296,7 @@
     "        if n == len(instrument.notes) - 1:\n",
     "            # No more notes left. Flush the off queue\n",
     "            while off_queue:\n",
-    "                data_append_time_shift(data[i], off_queue[0][0] - time)\n",
+    "                append_time_shift(data[i], times[i], time, off_queue[0][0] - time)\n",
     "                data[i].append(note_off_event(off_queue[0][1]))\n",
     "                time = off_queue[0][0]\n",
     "                times[i].append(time)\n",
@@ -323,9 +330,9 @@
  ],
  "metadata": {
   "environment": {
-   "name": "pytorch-gpu.1-4.m58",
+   "name": "pytorch-gpu.1-6.m59",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/pytorch-gpu.1-4:m58"
+   "uri": "gcr.io/deeplearning-platform-release/pytorch-gpu.1-6:m59"
   },
   "kernelspec": {
    "display_name": "Python 3",
