Fixed some tensor shape bugs in transformer

--- a/train.ipynb
+++ b/train.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,31 +142,30 @@
     "    # Note, to get the actual probabilities you'll have to take the softmax\n",
     "    # of this tensor along dimension 1\n",
     "    def forward(self, history, mask, instruments, gen_idx):\n",
-    "        longest_length = history.shape[0]\n",
-    "        batch_size = history.shape[2]\n",
-    "        max_instruments = instruments.shape[1]\n",
-    "        assert(history.shape[1] == max_instruments)\n",
-    "        assert(mask.shape[1] == max_instruments)\n",
-    "        assert(instruments.shape[2] == batch_size)\n",
-    "        assert(mask.shape[2] == batch_size)\n",
-    "        assert(mask.shape[0] == longest_length)\n",
+    "        L = history.shape[0] # longest length\n",
+    "        B = history.shape[2] # batch size\n",
+    "        N = instruments.shape[1] # max instruments\n",
+    "        assert(history.shape[1] == N)\n",
+    "        assert(mask.shape[1] == N)\n",
+    "        assert(instruments.shape[2] == B)\n",
+    "        assert(mask.shape[2] == B)\n",
+    "        assert(mask.shape[0] == L)\n",
+    "        assert(gen_idx.shape[0] == B)\n",
     "        \n",
-    "        batch_size = history.shape[2]\n",
-    "        \n",
-    "        inputs = self.embedding(history) + torch.tanh(self.i_embedding(instruments)).expand(history.shape[0], -1, -1, -1)\n",
+    "        inputs = self.embedding(history) + torch.tanh(self.i_embedding(instruments)).expand(L, -1, -1, -1)\n",
     "        \n",
     "        inputs = self.position_encoding(inputs)\n",
     "        \n",
-    "        encode_idx = torch.tensor([[i for i in range(max_instruments) if i != gen_idx[b]] for b in range(gen_idx.shape[0])])\n",
+    "        encode_idx = torch.tensor([[i for i in range(N) if i != gen_idx[b]] for b in range(B)])\n",
     "        encode_idx = encode_idx.transpose(0, 1).unsqueeze(0)\n",
-    "        encoder_inputs = torch.gather(inputs, 1, encode_idx.unsqueeze(3).expand(inputs.shape[0], -1, -1, self.embed_dim)).view(-1, batch_size, self.embed_dim)\n",
+    "        encoder_inputs = torch.gather(inputs, 1, encode_idx.unsqueeze(3).expand(L, -1, -1, self.embed_dim)).view(-1, B, self.embed_dim)\n",
     "\n",
-    "        encoder_mask = torch.gather(mask, 1, encode_idx.expand(inputs.shape[0], -1, -1)).view(-1, batch_size).transpose(0, 1)\n",
+    "        encoder_mask = torch.gather(mask, 1, encode_idx.expand(L, -1, -1)).view(-1, B).transpose(0, 1)\n",
     "        encoding = self.encoder(encoder_inputs, src_key_padding_mask=encoder_mask)\n",
     "        \n",
-    "        decode_idx = gen_idx.view(1, 1, -1).expand(inputs.shape[0], -1, -1)\n",
-    "        decoder_inputs = torch.gather(inputs, 1, decode_idx)\n",
-    "        decoder_mask = torch.gather(mask, 1, decode_idx).transpose(0, 1)\n",
+    "        decode_idx = gen_idx.view(1, 1, -1).expand(L, -1, -1)\n",
+    "        decoder_inputs = torch.gather(inputs, 1, decode_idx.unsqueeze(3).expand(-1, -1, -1, self.embed_dim)).squeeze(1)\n",
+    "        decoder_mask = torch.gather(mask, 1, decode_idx).squeeze(1).transpose(0, 1)\n",
     "        decoding = self.decoder(decoder_inputs, encoding, tgt_key_padding_mask=decoder_mask)\n",
     "        \n",
     "        return self.logits(decoding[-1])"
@@ -204,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,19 +298,43 @@
     "        \n",
     "        for inst_idx in range(len(batch[b]['history'])):\n",
     "            seq_length = len(batch[b]['history'][inst_idx])\n",
-    "            assert(seq_length == len(batch[b]['times'][inst_idx]))\n",
     "            sample['history'][:seq_length, inst_idx, b] = torch.tensor(batch[b]['history'][inst_idx], dtype=torch.long)\n",
     "            sample['mask'][:seq_length, inst_idx, b] = False\n",
     "            sample['times'][:seq_length, inst_idx, b] = torch.tensor(batch[b]['times'][inst_idx], dtype=torch.double)\n",
+    "            \n",
+    "    # TODO: remove this! For testing purposes, truncate batch to length 100\n",
+    "    sample['history'] = sample['history'][:100]\n",
+    "    sample['times'] = sample['times'][:100]\n",
+    "    sample['mask'] = sample['mask'][:100]\n",
     "\n",
     "    return sample"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting epoch 0\n",
+      "Starting iteration 0\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "expand(torch.LongTensor{[1, 1, 1]}, size=[100, -1]): the number of sizes provided (2) must be greater or equal to the number of dimensions in the tensor (3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-1271504a758e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     30\u001b[0m             \u001b[0mgen_idx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0minst\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlong\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m             \u001b[0mtarget_messages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgather\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'history'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgen_idx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mview\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_seq_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m             \u001b[0mmask\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'mask'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: expand(torch.LongTensor{[1, 1, 1]}, size=[100, -1]): the number of sizes provided (2) must be greater or equal to the number of dimensions in the tensor (3)"
+     ]
+    }
+   ],
    "source": [
     "batch_size = 1\n",
     "learning_rate = 0.001\n",
@@ -334,7 +357,9 @@
     "\n",
     "for epoch in range(epochs):\n",
     "    print('Starting epoch %d' %(epoch))\n",
+    "    b = 0\n",
     "    for batch in dataloader:\n",
+    "        print('Starting iteration %d' %(b))\n",
     "        max_seq_length = batch['history'].shape[0]\n",
     "        max_instruments = batch['history'].shape[1]\n",
     "        loss = 0\n",
@@ -342,7 +367,7 @@
     "            # Index of the instrument we want to generate music for (same for each batch element as of now)\n",
     "            gen_idx = torch.tensor([inst for i in range(batch_size)], dtype=torch.long)\n",
     "            \n",
-    "            target_messages = torch.gather(batch['history'], 1, gen_idx.view(1, 1, -1).expand(max_seq_length, -1, -1))\n",
+    "            target_messages = torch.gather(batch['history'], 1, gen_idx.view(1, 1, -1).expand(max_seq_length, -1, -1)).squeeze(1)\n",
     "            \n",
     "            mask = batch['mask']\n",
     "\n",
