Able to overfit to 100 messages from a single instrument

--- a/train.ipynb
+++ b/train.ipynb
@@ -9,7 +9,8 @@
     "import torch\n",
     "import numpy as np\n",
     "import math\n",
-    "import os"
+    "import os\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -73,7 +74,7 @@
     "# Taken from https://pytorch.org/tutorials/beginner/transformer_tutorial.html.\n",
     "# Only change is the view/expand in forward (accounts for multiple instruments and batches)\n",
     "class PositionalEncoding(torch.nn.Module):\n",
-    "    def __init__(self, d_model, dropout=0.1, max_len=5000):\n",
+    "    def __init__(self, d_model, dropout=0.1, max_len=10000):\n",
     "        super(PositionalEncoding, self).__init__()\n",
     "        self.dropout = torch.nn.Dropout(p=dropout)\n",
     "\n",
@@ -156,12 +157,16 @@
     "        \n",
     "        inputs = self.position_encoding(inputs)\n",
     "        \n",
-    "        encode_idx = torch.tensor([[i for i in range(N) if i != gen_idx[b]] for b in range(B)])\n",
-    "        encode_idx = encode_idx.transpose(0, 1).unsqueeze(0)\n",
-    "        encoder_inputs = torch.gather(inputs, 1, encode_idx.unsqueeze(3).expand(L, -1, -1, self.embed_dim)).view(-1, B, self.embed_dim)\n",
+    "        # If only one instrument, only run the decoder\n",
+    "        if N == 1:\n",
+    "            encoding = torch.zeros((1, B, self.embed_dim))\n",
+    "        else:\n",
+    "            encode_idx = torch.tensor([[i for i in range(N) if i != gen_idx[b]] for b in range(B)])\n",
+    "            encode_idx = encode_idx.transpose(0, 1).unsqueeze(0)\n",
+    "            encoder_inputs = torch.gather(inputs, 1, encode_idx.unsqueeze(3).expand(L, -1, -1, self.embed_dim)).view(-1, B, self.embed_dim)\n",
     "\n",
-    "        encoder_mask = torch.gather(mask, 1, encode_idx.expand(L, -1, -1)).view(-1, B).transpose(0, 1)\n",
-    "        encoding = self.encoder(encoder_inputs, src_key_padding_mask=encoder_mask)\n",
+    "            encoder_mask = torch.gather(mask, 1, encode_idx.expand(L, -1, -1)).view(-1, B).transpose(0, 1)\n",
+    "            encoding = self.encoder(encoder_inputs, src_key_padding_mask=encoder_mask)\n",
     "        \n",
     "        decode_idx = gen_idx.view(1, 1, -1).expand(L, -1, -1)\n",
     "        decoder_inputs = torch.gather(inputs, 1, decode_idx.unsqueeze(3).expand(-1, -1, -1, self.embed_dim)).squeeze(1)\n",
@@ -173,37 +178,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "##### Tests for baseline transformer #####\n",
-    "recording = np.load('preprocessed_data/recording0.npy', allow_pickle=True)\n",
-    "instruments_np = np.load('preprocessed_data/instruments0.npy', allow_pickle=True)\n",
+    "# To make sure things are working, let's see if we can get the model to overfit to a single instrument's\n",
+    "# part in a single song (only the first 100 time steps)\n",
     "\n",
-    "instrument_idx = [instrument_numbers.index(i) for i in instruments_np]\n",
+    "ff_size = 512\n",
+    "heads = 8\n",
+    "attention_layers=  6\n",
+    "embed_dim = 256\n",
     "\n",
-    "# Form a single-element batch from this recording\n",
-    "seq_lengths = [messages.shape[0] for messages in recording]\n",
-    "longest_len = max(seq_lengths)\n",
-    "batch = torch.ones((longest_len, recording.shape[0], 1), dtype=torch.long)\n",
-    "mask = torch.zeros((longest_len, recording.shape[0], 1), dtype=torch.bool)\n",
-    "instruments = torch.zeros((1, recording.shape[0], 1), dtype=torch.long)\n",
+    "grad_clip = 10\n",
     "\n",
-    "for i, messages in enumerate(recording):\n",
-    "    batch[:seq_lengths[i], i, 0] = torch.tensor(messages, dtype=torch.long)\n",
-    "    mask[:seq_lengths[i], i, 0] = 1\n",
-    "    \n",
-    "instruments[0, :len(instrument_idx), 0] = torch.tensor(instrument_idx, dtype=torch.long)\n",
-    "\n",
-    "et = EnsembleTransformer(message_dim, 256, num_instruments, 4, 6, 2048).double()\n",
-    "\n",
-    "print(et(batch, mask, instruments, torch.tensor([0])))"
+    "model = EnsembleTransformer(message_dim, embed_dim, num_instruments, heads, attention_layers, ff_size)\n",
+    "for p in model.parameters():\n",
+    "    p.register_hook(lambda grad: torch.clamp(grad, -grad_clip, grad_clip))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.load_state_dict(torch.load('overfit.pth'))\n",
+    "model.eval() # Training with eval just to see if we can overfit without dropout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recording = np.load('preprocessed_data/recording318.npy', allow_pickle=True)\n",
+    "instruments_np = np.load('preprocessed_data/instruments318.npy', allow_pickle=True)\n",
+    "times_np = np.load('preprocessed_data/times318.npy', allow_pickle=True)\n",
+    "\n",
+    "inst = 1\n",
+    "\n",
+    "max_seq_length = 100\n",
+    "\n",
+    "history = torch.tensor(recording[inst][:max_seq_length], dtype=torch.long).view(-1, 1, 1)\n",
+    "mask = torch.zeros(history.shape, dtype=torch.bool)\n",
+    "instruments = torch.tensor(instrument_numbers.index(instruments_np[inst]), dtype=torch.long).view(1, 1, 1)\n",
+    "times = torch.tensor(times_np[inst][:max_seq_length]).view(-1, 1, 1)\n",
+    "\n",
+    "max_instruments = history.shape[1]\n",
+    "\n",
+    "batch_size = 1\n",
+    "learning_rate = 0.001\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "loss_fn = torch.nn.CrossEntropyLoss()\n",
+    "epochs = 450\n",
+    "train_losses = np.zeros(epochs)\n",
+    "\n",
+    "target_messages = history[1:].flatten()\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    print('Starting epoch %d' %(epoch))\n",
+    "    # Index of the instrument we want to generate music for (there's only one instrument)\n",
+    "    gen_idx = torch.tensor([0], dtype=torch.long)\n",
+    "    \n",
+    "    # Move forward in time\n",
+    "    logits = torch.zeros((max_seq_length - 1, batch_size, message_dim))\n",
+    "    for t in range(1, max_seq_length):\n",
+    "        input_mask = mask.clone()\n",
+    "        input_mask[t:] = True\n",
+    "        input_mask = torch.logical_or(input_mask, times > times[t].unsqueeze(0).expand(max_seq_length, max_instruments, -1))\n",
+    "        logits[t - 1] = model(history, input_mask, instruments, gen_idx)\n",
+    "                \n",
+    "    loss = loss_fn(logits.view(-1, message_dim), target_messages)\n",
+    "    optimizer.zero_grad()\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    train_losses[epoch] = loss.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), 'overfit.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(train_losses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sample from model\n",
+    "gen_history = torch.tensor(recording[inst][0], dtype=torch.long).view(-1, 1, 1)\n",
+    "mask = torch.zeros((1, 1, 1), dtype=torch.bool)\n",
+    "instruments = torch.tensor(instrument_numbers.index(instruments_np[inst]), dtype=torch.long).view(1, 1, 1)\n",
+    "times = torch.tensor([0]).view(-1, 1, 1)\n",
+    "model.eval() # Turns off the dropout for evaluation. Need to do this to get repeatable evaluation outputs\n",
+    "\n",
+    "seq_length = 100\n",
+    "max_instruments = history.shape[1]\n",
+    "\n",
+    "# Index of the instrument we want to generate music for (there's only one instrument)\n",
+    "gen_idx = torch.tensor([0], dtype=torch.long)\n",
+    "\n",
+    "# Move forward in time\n",
+    "wrong_cnt = 0\n",
+    "for t in range(1, seq_length):\n",
+    "    probs = torch.nn.functional.softmax(model(gen_history, mask, instruments, gen_idx), dim=1)\n",
+    "    gen_history = torch.cat((gen_history, torch.multinomial(probs, 1).view(1, 1, -1)))\n",
+    "    #probs = torch.nn.functional.softmax(model(history[:t], mask, instruments, gen_idx), dim=1)\n",
+    "    #gen_history = torch.cat((gen_history, torch.argmax(probs.flatten()).view(1, 1, 1)))\n",
+    "    if torch.argmax(probs.flatten()) != history[t].flatten():\n",
+    "        wrong_cnt += 1\n",
+    "        print(torch.topk(probs.flatten(), 10))\n",
+    "        print(history[t])\n",
+    "    \n",
+    "    mask = torch.cat((mask, torch.zeros((1, 1, 1), dtype=torch.bool)))\n",
+    "\n",
+    "print(wrong_cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('test_history.npy', np.array([history.flatten().numpy()], dtype='object'))\n",
+    "np.save('test_instruments.npy', np.array([instrument_numbers[instruments[0]]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +410,7 @@
     "\n",
     "    sample = {'history': torch.ones((longest_len, max_instruments, batch_size), dtype=torch.long), \\\n",
     "              'instruments': torch.zeros((1, max_instruments, batch_size), dtype=torch.long), \\\n",
-    "              'times': torch.zeros((longest_len, max_instruments, batch_size), dtype=torch.double), \\\n",
+    "              'times': torch.zeros((longest_len, max_instruments, batch_size)), \\\n",
     "              'mask': torch.ones((longest_len, max_instruments, batch_size), dtype=torch.bool)}\n",
     "\n",
     "    for b in range(batch_size):\n",
@@ -300,14 +421,27 @@
     "            seq_length = len(batch[b]['history'][inst_idx])\n",
     "            sample['history'][:seq_length, inst_idx, b] = torch.tensor(batch[b]['history'][inst_idx], dtype=torch.long)\n",
     "            sample['mask'][:seq_length, inst_idx, b] = False\n",
-    "            sample['times'][:seq_length, inst_idx, b] = torch.tensor(batch[b]['times'][inst_idx], dtype=torch.double)\n",
+    "            sample['times'][:seq_length, inst_idx, b] = torch.tensor(batch[b]['times'][inst_idx])\n",
     "            \n",
-    "    # TODO: remove this! For testing purposes, truncate batch to length 100\n",
-    "    sample['history'] = sample['history'][:100]\n",
-    "    sample['times'] = sample['times'][:100]\n",
-    "    sample['mask'] = sample['mask'][:100]\n",
-    "\n",
     "    return sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ff_size = 512\n",
+    "heads = 8\n",
+    "attention_layers=  6\n",
+    "embed_dim = 256\n",
+    "grad_clip = 10\n",
+    "\n",
+    "model = EnsembleTransformer(message_dim, embed_dim, len(instrument_numbers), heads, attention_layers, ff_size)\n",
+    "\n",
+    "for p in model.parameters():\n",
+    "    p.register_hook(lambda grad: torch.clamp(grad, -grad_clip, grad_clip))"
    ]
   },
   {
@@ -318,46 +452,50 @@
    "source": [
     "batch_size = 1\n",
     "learning_rate = 0.001\n",
-    "ff_size = 512\n",
-    "heads = 8\n",
-    "attention_layers=  6\n",
-    "embed_dim = 256\n",
     "\n",
     "dataset = MIDIDataset('preprocessed_data')\n",
-    "\n",
     "dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "\n",
-    "# Training\n",
-    "model = EnsembleTransformer(message_dim, embed_dim, len(instrument_numbers), heads, attention_layers, ff_size)\n",
     "optimizer = torch.optim.Adam(model.parameters())\n",
     "loss_fn = torch.nn.CrossEntropyLoss()\n",
     "epochs = 10\n",
     "train_losses = np.zeros(epochs)\n",
     "test_losses = np.zeros(epochs) # TODO: train/test split. Can we do this with Dataloader?\n",
     "\n",
+    "model.train()\n",
+    "\n",
     "for epoch in range(epochs):\n",
     "    print('Starting epoch %d' %(epoch))\n",
     "    for b, batch in enumerate(dataloader):\n",
     "        print('Starting iteration %d' %(b))\n",
     "        max_seq_length = batch['history'].shape[0]\n",
+    "        num_targets = max_seq_length - 1 # Messages start from t = 0, but we start generating at t = 1\n",
     "        max_instruments = batch['history'].shape[1]\n",
-    "        loss = 0\n",
+    "        loss = torch.tensor([0])\n",
     "        for inst in range(max_instruments):\n",
     "            # Index of the instrument we want to generate music for (same for each batch element as of now)\n",
     "            gen_idx = torch.tensor([inst for i in range(batch_size)], dtype=torch.long)\n",
     "            \n",
-    "            target_messages = torch.gather(batch['history'], 1, gen_idx.view(1, 1, -1).expand(max_seq_length, -1, -1)).squeeze(1)\n",
-    "            \n",
     "            mask = batch['mask']\n",
+    "            \n",
+    "            logits = torch.zeros((num_targets, batch_size, message_dim))\n",
     "\n",
     "            # Move forward in time\n",
     "            for t in range(1, max_seq_length):\n",
     "                # Get current time for each batch element (1x1xB) and mask out messages with a greater time stamp\n",
     "                times = torch.gather(batch['times'][t], 0, gen_idx.view(1, -1)).unsqueeze(0)\n",
-    "                input_mask = torch.logical_and(mask, batch['times'][t] < times.expand(max_seq_length, max_instruments, -1))\n",
-    "                output_mask = torch.gather(mask[t], 0, gen_idx.view(1, -1))\n",
-    "                loss += output_mask*loss_fn(model(batch['history'], input_mask, batch['instruments'], gen_idx), target_messages[t])\n",
+    "                input_mask = torch.logical_or(mask, batch['times'] > times.expand(max_seq_length, max_instruments, -1))\n",
+    "                for seq in range(batch_size):\n",
+    "                    input_mask[t:, gen_idx[seq], seq] = True\n",
     "                \n",
+    "                logits[t - 1] = model(batch['history'], input_mask, batch['instruments'], gen_idx)\n",
+    "                \n",
+    "            logits = logits.view(-1, message_dim)\n",
+    "            target_messages = torch.gather(batch['history'][1:], 1, gen_idx.view(1, 1, -1).expand(num_targets, -1, -1)).flatten()\n",
+    "            output_mask = torch.gather(mask[1:], 1, gen_idx.view(1, 1, -1).expand(num_targets, -1, -1)).flatten()\n",
+    "            loss += loss_fn(logits[output_mask], target_messages[output_mask])\n",
+    "        \n",
+    "        loss /= max_instruments\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
@@ -370,7 +508,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sample from model"
+    "# Sample from model\n",
+    "model.eval()"
    ]
   },
   {
