--- a/data_to_midi.ipynb
+++ b/data_to_midi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,33 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mid = pretty_midi.PrettyMIDI('musicnet_midis/Haydn/2105_op64n5_2.mid')"
+    "data = np.load('test_history.npy', allow_pickle=True)\n",
+    "inst = np.load('test_instruments.npy', allow_pickle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = np.load('preprocessed_data/recording3.npy', allow_pickle=True)\n",
-    "inst = np.load('preprocessed_data/instruments3.npy', allow_pickle=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def data_to_midi(data, instrument_number):\n",
     "    instrument=pretty_midi.Instrument(program=instrument_number,name=pretty_midi.program_to_instrument_name(instrument_number))\n",
     "    curr_time = 0\n",
-    "    curr_velocity = 0\n",
+    "    curr_velocity = 96\n",
     "    #start time and velocity of the current note being played\n",
     "    note_start = {}\n",
     "    note_velocity = {}\n",
@@ -62,7 +53,8 @@
     "            #note off event\n",
     "            curr_note = idx - num_notes\n",
     "            if curr_note not in note_start:\n",
-    "                raise ValueError(\"note\" + str(idx-num_notes) + \"has not been started!\")\n",
+    "                continue\n",
+    "                #raise ValueError(\"note\" + str(idx-num_notes) + \"has not been started!\")\n",
     "            note_same[curr_note] -= 1\n",
     "            if note_same[curr_note] == 0:\n",
     "                note=pretty_midi.Note(velocity=note_velocity[curr_note], pitch=curr_note, start=note_start[curr_note], end=curr_time)\n",
@@ -83,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,404 +86,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 261,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "recording.instruments"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recording.write(\"generated_midi/first_recording.mid\")"
+    "recording.write(\"test_midi.mid\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "file = open( \"preprocessed_data_fnames.p\", \"rb\" )\n",
     "res = pickle.load(file)\n",
     "file.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Haydn/2106_op64n5_3.mid',\n",
-       " 'Haydn/2104_op64n5_1.mid',\n",
-       " 'Haydn/2105_op64n5_2.mid',\n",
-       " 'Beethoven/2314_qt15_2.mid',\n",
-       " 'Beethoven/2483_qt05_4.mid',\n",
-       " 'Beethoven/2522_vcs3_2.mid',\n",
-       " 'Beethoven/2505_op103-2.mid',\n",
-       " 'Beethoven/2532_ps32_01.mid',\n",
-       " 'Beethoven/2335_vns08_2.mid',\n",
-       " 'Beethoven/2404_ps31_01.mid',\n",
-       " 'Beethoven/2608_ps16_03.mid',\n",
-       " 'Beethoven/2556_ps30_02.mid',\n",
-       " 'Beethoven/2595_ps18_03.mid',\n",
-       " 'Beethoven/2315_qt15_3.mid',\n",
-       " 'Beethoven/2486_ps04_02.mid',\n",
-       " 'Beethoven/2381_qt13_1.mid',\n",
-       " 'Beethoven/2471_ps03_02.mid',\n",
-       " 'Beethoven/2405_ps31_02.mid',\n",
-       " 'Beethoven/2491_ps04_03.mid',\n",
-       " 'Beethoven/2366_qt12_2.mid',\n",
-       " 'Beethoven/2424_ps01_03.mid',\n",
-       " 'Beethoven/2423_ps01_02.mid',\n",
-       " 'Beethoven/2415_lvbsext2.mid',\n",
-       " 'Beethoven/2576_ps08_03.mid',\n",
-       " 'Beethoven/2463_lvb23c.mid',\n",
-       " 'Beethoven/2603_ps26_01.mid',\n",
-       " 'Beethoven/2398_op47_2.mid',\n",
-       " 'Beethoven/2509_ps02_01.mid',\n",
-       " 'Beethoven/2497_qt11_4.mid',\n",
-       " 'Beethoven/2555_ps30_01.mid',\n",
-       " 'Beethoven/2538_ps20_02.mid',\n",
-       " 'Beethoven/2528_ps05_02.mid',\n",
-       " 'Beethoven/2444_ps29_04.mid',\n",
-       " 'Beethoven/2501_lvb12n3b.mid',\n",
-       " 'Beethoven/2542_ps28_03.mid',\n",
-       " 'Beethoven/2343_ps14_01.mid',\n",
-       " 'Beethoven/2348_ps14_03.mid',\n",
-       " 'Beethoven/2466_lvb23c.mid',\n",
-       " 'Beethoven/2620_ps06_03.mid',\n",
-       " 'Beethoven/2476_ps03_02.mid',\n",
-       " 'Beethoven/2562_qt02_4.mid',\n",
-       " 'Beethoven/2560_qt02_2.mid',\n",
-       " 'Beethoven/2389_ps17_02.mid',\n",
-       " 'Beethoven/2531_ps32_02.mid',\n",
-       " 'Beethoven/2594_ps18_02.mid',\n",
-       " 'Beethoven/2590_ps12_03.mid',\n",
-       " 'Beethoven/2388_ps17_01.mid',\n",
-       " 'Beethoven/2364_ps15_04.mid',\n",
-       " 'Beethoven/2571_bevs7b.mid',\n",
-       " 'Beethoven/2416_lvbsext3.mid',\n",
-       " 'Beethoven/2633_ps10_03.mid',\n",
-       " 'Beethoven/2392_ps17_02.mid',\n",
-       " 'Beethoven/2619_ps06_02.mid',\n",
-       " 'Beethoven/2382_qt13_2.mid',\n",
-       " 'Beethoven/2530_ps32_01.mid',\n",
-       " 'Beethoven/2487_ps04_03.mid',\n",
-       " 'Beethoven/2533_ps32_02.mid',\n",
-       " 'Beethoven/2420_lvb12n2c.mid',\n",
-       " 'Beethoven/2512_ps02_04.mid',\n",
-       " 'Beethoven/2368_qt12_4.mid',\n",
-       " 'Beethoven/2572_bevs7c.mid',\n",
-       " 'Beethoven/2462_lvb23b.mid',\n",
-       " 'Beethoven/2593_ps18_01.mid',\n",
-       " 'Beethoven/2581_ps22_01.mid',\n",
-       " 'Beethoven/2596_ps18_04.mid',\n",
-       " 'Beethoven/2374_ps19_02.mid',\n",
-       " 'Beethoven/2582_ps22_02.mid',\n",
-       " 'Beethoven/2472_ps03_03.mid',\n",
-       " 'Beethoven/2482_qt05_3.mid',\n",
-       " 'Beethoven/2568_ps27_02.mid',\n",
-       " 'Beethoven/2488_ps04_04.mid',\n",
-       " 'Beethoven/2391_ps17_01.mid',\n",
-       " 'Beethoven/2346_ps14_01.mid',\n",
-       " 'Beethoven/2410_ps13_01.mid',\n",
-       " 'Beethoven/2417_lvbsext4.mid',\n",
-       " 'Beethoven/2622_qt07_2.mid',\n",
-       " 'Beethoven/2504_op103-1.mid',\n",
-       " 'Beethoven/2626_vns10_1.mid',\n",
-       " 'Beethoven/2527_ps05_01.mid',\n",
-       " 'Beethoven/2507_op103-4.mid',\n",
-       " 'Beethoven/2478_ps03_04.mid',\n",
-       " 'Beethoven/2627_vns10_2.mid',\n",
-       " 'Beethoven/2336_vns08_3.mid',\n",
-       " 'Beethoven/2502_lvb12n3c.mid',\n",
-       " 'Beethoven/2473_ps03_04.mid',\n",
-       " 'Beethoven/2492_ps04_04.mid',\n",
-       " 'Beethoven/2573_bevs7d.mid',\n",
-       " 'Beethoven/2628_vns10_3.mid',\n",
-       " 'Beethoven/2510_ps02_02.mid',\n",
-       " 'Beethoven/2567_ps27_01.mid',\n",
-       " 'Beethoven/2490_ps04_02.mid',\n",
-       " 'Beethoven/2477_ps03_03.mid',\n",
-       " 'Beethoven/2403_qt01_4.mid',\n",
-       " 'Beethoven/2550_ps24_02.mid',\n",
-       " 'Beethoven/2607_ps16_02.mid',\n",
-       " 'Beethoven/2480_qt05_1.mid',\n",
-       " 'Beethoven/2372_ps09_03.mid',\n",
-       " 'Beethoven/2575_ps08_02.mid',\n",
-       " 'Beethoven/2341_vns08_2.mid',\n",
-       " 'Beethoven/2406_ps31_03.mid',\n",
-       " 'Beethoven/2566_ps11_04.mid',\n",
-       " 'Beethoven/2376_qt08_1.mid',\n",
-       " 'Beethoven/2379_qt08_4.mid',\n",
-       " 'Beethoven/2614_ps07_02.mid',\n",
-       " 'Beethoven/2570_bevs7a.mid',\n",
-       " 'Beethoven/2432_qt16_2.mid',\n",
-       " 'Beethoven/2591_ps12_04.mid',\n",
-       " 'Beethoven/2629_vns10_4.mid',\n",
-       " 'Beethoven/2393_ps17_03.mid',\n",
-       " 'Beethoven/2334_vns08_1.mid',\n",
-       " 'Beethoven/2350_ps14_01.mid',\n",
-       " 'Beethoven/2342_vns08_3.mid',\n",
-       " 'Beethoven/2377_qt08_2.mid',\n",
-       " 'Beethoven/2319_bh38m2.mid',\n",
-       " 'Beethoven/2451_qt06_2.mid',\n",
-       " 'Beethoven/2320_bh38m3.mid',\n",
-       " 'Beethoven/2383_qt13_3.mid',\n",
-       " 'Beethoven/2588_ps12_01.mid',\n",
-       " 'Beethoven/2371_ps09_02.mid',\n",
-       " 'Beethoven/2523_vcs3_3.mid',\n",
-       " 'Beethoven/2436_ps21_01.mid',\n",
-       " 'Beethoven/2481_qt05_2.mid',\n",
-       " 'Beethoven/2411_ps13_02.mid',\n",
-       " 'Beethoven/2514_ps02_02.mid',\n",
-       " 'Beethoven/2586_vcs4_2.mid',\n",
-       " 'Beethoven/2678_ps10_01.mid',\n",
-       " 'Beethoven/2325_ps23_01.mid',\n",
-       " 'Beethoven/2618_ps06_01.mid',\n",
-       " 'Beethoven/2557_ps30_03.mid',\n",
-       " 'Beethoven/2357_ps15_02.mid',\n",
-       " 'Beethoven/2365_qt12_1.mid',\n",
-       " 'Beethoven/2322_ps23_01.mid',\n",
-       " 'Beethoven/2494_qt11_1.mid',\n",
-       " 'Beethoven/2359_ps15_04.mid',\n",
-       " 'Beethoven/2516_ps02_04.mid',\n",
-       " 'Beethoven/2611_ps07_02.mid',\n",
-       " 'Beethoven/2330_lvb12n1a.mid',\n",
-       " 'Beethoven/2521_vcs3_1.mid',\n",
-       " 'Beethoven/2358_ps15_03.mid',\n",
-       " 'Beethoven/2677_ps09_01.mid',\n",
-       " 'Beethoven/2390_ps17_03.mid',\n",
-       " 'Beethoven/2318_bh38m1.mid',\n",
-       " 'Beethoven/2422_ps01_01.mid',\n",
-       " 'Beethoven/2632_ps10_02.mid',\n",
-       " 'Beethoven/2529_ps05_03.mid',\n",
-       " 'Beethoven/2442_ps29_02.mid',\n",
-       " 'Beethoven/2384_qt13_4.mid',\n",
-       " 'Beethoven/2433_qt16_3.mid',\n",
-       " 'Beethoven/2506_op103-3.mid',\n",
-       " 'Beethoven/2313_qt15_1.mid',\n",
-       " 'Beethoven/2431_qt16_1.mid',\n",
-       " 'Beethoven/2564_ps11_02.mid',\n",
-       " 'Beethoven/2621_qt07_1.mid',\n",
-       " 'Beethoven/2443_ps29_03.mid',\n",
-       " 'Beethoven/2373_ps19_01.mid',\n",
-       " 'Beethoven/2345_ps14_03.mid',\n",
-       " 'Beethoven/2537_ps20_01.mid',\n",
-       " 'Beethoven/2397_op47_1.mid',\n",
-       " 'Beethoven/2441_ps29_01.mid',\n",
-       " 'Beethoven/2540_ps28_01.mid',\n",
-       " 'Cambini/2083_quint3f3.mid',\n",
-       " 'Cambini/2075_quintBb1.mid',\n",
-       " 'Cambini/2081_quint3f1.mid',\n",
-       " 'Cambini/2080_quint2d3.mid',\n",
-       " 'Cambini/2079_quint2d2.mid',\n",
-       " 'Cambini/2076_quintBb2.mid',\n",
-       " 'Cambini/2078_quint2d1.mid',\n",
-       " 'Cambini/2077_quintBb3.mid',\n",
-       " 'Cambini/2082_quint3f2.mid',\n",
-       " 'Schubert/1749_sy_sps11.mid',\n",
-       " 'Schubert/1752_sy_sps14.mid',\n",
-       " 'Schubert/1756_sy_sps53.mid',\n",
-       " 'Schubert/1751_sy_sps13.mid',\n",
-       " 'Schubert/1728_schubert_op114_3.mid',\n",
-       " 'Schubert/1763_scbt1421.mid',\n",
-       " 'Schubert/1750_sy_sps12.mid',\n",
-       " 'Schubert/1730_schubert_op114_5.mid',\n",
-       " 'Schubert/1742_sb163m2.mid',\n",
-       " 'Schubert/1773_sy_sps43.mid',\n",
-       " 'Schubert/1775_sy_sps21.mid',\n",
-       " 'Schubert/1759_d958-3.mid',\n",
-       " 'Schubert/1766_scbt1424.mid',\n",
-       " 'Schubert/1727_schubert_op114_2.mid',\n",
-       " 'Schubert/1733_sy_sps92.mid',\n",
-       " 'Schubert/1758_d958-2.mid',\n",
-       " 'Schubert/1755_sy_sps52.mid',\n",
-       " 'Schubert/1734_sy_sps93.mid',\n",
-       " 'Schubert/1739_sb99m4.mid',\n",
-       " 'Schubert/1757_d958-1.mid',\n",
-       " 'Schubert/1776_sy_sps22.mid',\n",
-       " 'Schubert/1760_d958-4.mid',\n",
-       " 'Schubert/1764_scbt1422.mid',\n",
-       " 'Schubert/1735_sy_sps94.mid',\n",
-       " 'Schubert/1729_schubert_op114_4.mid',\n",
-       " 'Schubert/1768_sy_sps32.mid',\n",
-       " 'Schubert/1777_sy_sps23.mid',\n",
-       " 'Schubert/1772_sy_sps42.mid',\n",
-       " 'Schubert/1771_sy_sps41.mid',\n",
-       " 'Schubert/1765_scbt1423.mid',\n",
-       " 'Faure/2167_gr_f45m2.mid',\n",
-       " 'Faure/2166_gr_f45m1.mid',\n",
-       " 'Faure/2169_gr_f45m4.mid',\n",
-       " 'Faure/2168_gr_f45m3.mid',\n",
-       " 'Brahms/2156_br18m3.mid',\n",
-       " 'Brahms/2159_bra40_2.mid',\n",
-       " 'Brahms/2131_bra11-6.mid',\n",
-       " 'Brahms/2119_brahms_sonata_opus_120-4.mid',\n",
-       " 'Brahms/2112_jb38_1.mid',\n",
-       " 'Brahms/2116_brahms_sonata_opus_120-1.mid',\n",
-       " 'Brahms/2161_bra40_4.mid',\n",
-       " 'Brahms/2149_br25m2.mid',\n",
-       " 'Brahms/2148_br25m1.mid',\n",
-       " 'Brahms/2154_br18m1.mid',\n",
-       " 'Brahms/2151_br25m4.mid',\n",
-       " 'Brahms/2117_brahms_sonata_opus_120-2.mid',\n",
-       " 'Brahms/2127_bra11-2.mid',\n",
-       " 'Brahms/2118_brahms_sonata_opus_120-3.mid',\n",
-       " 'Brahms/2140_br51n1m4.mid',\n",
-       " 'Brahms/2147_br36m4.mid',\n",
-       " 'Brahms/2160_bra40_3.mid',\n",
-       " 'Brahms/2158_bra40_1.mid',\n",
-       " 'Brahms/2150_br25m3.mid',\n",
-       " 'Brahms/2113_jb38_2.mid',\n",
-       " 'Brahms/2155_br18m2.mid',\n",
-       " 'Brahms/2138_br51n1m2.mid',\n",
-       " 'Brahms/2157_br18m4.mid',\n",
-       " 'Brahms/2114_jb38_3.mid',\n",
-       " 'Dvorak/1919_dvqt10m4.mid',\n",
-       " 'Dvorak/1933_dv96_4.mid',\n",
-       " 'Dvorak/1922_dvqt10m3.mid',\n",
-       " 'Dvorak/1931_dv96_2.mid',\n",
-       " 'Dvorak/1916_dvq10m1.mid',\n",
-       " 'Dvorak/1918_dvqt10m3.mid',\n",
-       " 'Dvorak/1932_dv96_3.mid',\n",
-       " 'Dvorak/1923_dvqt10m4.mid',\n",
-       " 'Bach/2217_cs3-1pre.mid',\n",
-       " 'Bach/2228_prelude6.mid',\n",
-       " 'Bach/2186_vs6_1.mid',\n",
-       " 'Bach/2659_vs2_6.mid',\n",
-       " 'Bach/2296_cs4-4sar.mid',\n",
-       " 'Bach/2240_prelude17.mid',\n",
-       " 'Bach/2225_prelude7.mid',\n",
-       " 'Bach/2219_cs3-3cou.mid',\n",
-       " 'Bach/2201_prelude16.mid',\n",
-       " 'Bach/2302_fugue5.mid',\n",
-       " 'Bach/2213_fugue2.mid',\n",
-       " 'Bach/2191_vs6_5.mid',\n",
-       " 'Bach/2203_fp-2cou.mid',\n",
-       " 'Bach/2239_fugue17.mid',\n",
-       " 'Bach/2234_prelude11.mid',\n",
-       " 'Bach/2195_fugue3.mid',\n",
-       " 'Bach/2200_fugue16.mid',\n",
-       " 'Bach/2212_prelude12.mid',\n",
-       " 'Bach/2307_fugue18.mid',\n",
-       " 'Bach/2208_prelude10.mid',\n",
-       " 'Bach/2215_fugue1.mid',\n",
-       " 'Bach/2220_cs3-4sar.mid',\n",
-       " 'Bach/2297_cs4-5bou.mid',\n",
-       " 'Bach/2238_prelude23.mid',\n",
-       " 'Bach/2295_cs4-3cou.mid',\n",
-       " 'Bach/2231_fugue21.mid',\n",
-       " 'Bach/2294_cs4-2all.mid',\n",
-       " 'Bach/2237_fugue23.mid',\n",
-       " 'Bach/2308_prelude18.mid',\n",
-       " 'Bach/2289_vs2_3.mid',\n",
-       " 'Bach/2221_cs3-5bou.mid',\n",
-       " 'Bach/2207_fugue10.mid',\n",
-       " 'Bach/2242_vs1_2.mid',\n",
-       " 'Bach/2283_vhs1_2.mid',\n",
-       " 'Bach/2247_fugue9.mid',\n",
-       " 'Bach/2285_vhs1_4.mid',\n",
-       " 'Bach/2196_prelude3.mid',\n",
-       " 'Bach/2209_fugue4.mid',\n",
-       " 'Bach/2232_prelude21.mid',\n",
-       " 'Bach/2303_prelude5.mid',\n",
-       " 'Bach/2204_fp-3sar.mid',\n",
-       " 'Bach/2282_vhs1_1.mid',\n",
-       " 'Bach/2284_vhs1_3.mid',\n",
-       " 'Bach/2214_prelude2.mid',\n",
-       " 'Bach/2210_prelude4.mid',\n",
-       " 'Bach/2224_fugue7.mid',\n",
-       " 'Bach/2218_cs3-2all.mid',\n",
-       " 'Bach/2244_vs1_4.mid',\n",
-       " 'Bach/2298_cs4-6gig.mid',\n",
-       " 'Bach/2202_fp-1all.mid',\n",
-       " 'Bach/2243_vs1_3.mid',\n",
-       " 'Bach/2241_vs1_1.mid',\n",
-       " 'Bach/2288_vs2_2.mid',\n",
-       " 'Bach/2198_fugue22.mid',\n",
-       " 'Bach/2304_fugue14.mid',\n",
-       " 'Bach/2300_prelude8.mid',\n",
-       " 'Bach/2293_cs4-1pre.mid',\n",
-       " 'Bach/2248_prelude9.mid',\n",
-       " 'Bach/2222_cs3-6gig.mid',\n",
-       " 'Bach/2229_fugue20.mid',\n",
-       " 'Mozart/1819_k3754a.mid',\n",
-       " 'Mozart/1818_k3753.mid',\n",
-       " 'Mozart/1876_k496_2.mid',\n",
-       " 'Mozart/1811_kv581b.mid',\n",
-       " 'Mozart/1822_kv_421_1.mid',\n",
-       " 'Mozart/1824_kv_421_3.mid',\n",
-       " 'Mozart/1828_k542_2.mid',\n",
-       " 'Mozart/1791_kv_465_4.mid',\n",
-       " 'Mozart/1812_kv581c.mid',\n",
-       " 'Mozart/1805_kv_387_1.mid',\n",
-       " 'Mozart/1835_kv_590_3.mid',\n",
-       " 'Mozart/1873_k502_3.mid',\n",
-       " 'Mozart/1813_kv581d.mid',\n",
-       " 'Mozart/1893_k564_3.mid',\n",
-       " 'Mozart/1788_kv_465_1.mid',\n",
-       " 'Mozart/1792_kv_465_1.mid',\n",
-       " 'Mozart/1859_kv_464_2.mid',\n",
-       " 'Mozart/1807_kv_387_3.mid',\n",
-       " 'Mozart/1790_kv_465_3.mid',\n",
-       " 'Mozart/1829_k542_3.mid',\n",
-       " 'Mozart/1789_kv_465_2.mid',\n",
-       " 'Mozart/1872_k502_2.mid',\n",
-       " 'Mozart/1793_kv_465_2.mid',\n",
-       " 'Mozart/1817_k3752.mid',\n",
-       " 'Ravel/2177_gr_rqtf1.mid',\n",
-       " 'Ravel/2178_gr_rqtf2.mid',\n",
-       " 'Ravel/2180_gr_rqtf4.mid',\n",
-       " 'Ravel/2179_gr_rqtf3.mid']"
-      ]
-     },
-     "execution_count": 166,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res.index('Haydn/2106_op64n5_3.mid')"
    ]
   },
   {
@@ -504,9 +114,9 @@
  ],
  "metadata": {
   "environment": {
-   "name": "pytorch-gpu.1-4.m58",
+   "name": "pytorch-gpu.1-6.m59",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/pytorch-gpu.1-4:m58"
+   "uri": "gcr.io/deeplearning-platform-release/pytorch-gpu.1-6:m59"
   },
   "kernelspec": {
    "display_name": "Python 3",
