--- a/train.ipynb
+++ b/train.ipynb
@@ -29,28 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "duplicate argument 'heads' in function definition (<ipython-input-119-da3088c90439>, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-119-da3088c90439>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m duplicate argument 'heads' in function definition\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "###### Music Transformer version of our network ######\n",
     "# Uses the relative position representation from the Music Transformer\n",
     "\n",
     "\n",
     "# HuangMHA: multi-headed attention using relative position representation\n",
-    "# (specifically, the representation introduced by Shaw and optimized by Huang)\n",
-    "class HuangMHA(torch.nn.Module):\n",
-    "    def __init__(self, heads, embed_dim, heads):\n",
-    "        pass"
+    "# (specifically, the representation introduced by Shaw and optimized by Huang)"
    ]
   },
   {
@@ -63,14 +51,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Baseline Transformer definition\n",
+    "Uses absolute position representation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "##### Baseline Transformer version of our network #####\n",
-    "# Vanilla transformer, uses absolute position representation\n",
-    "\n",
     "# Taken from https://pytorch.org/tutorials/beginner/transformer_tutorial.html.\n",
     "# Only change is the view/expand in forward (accounts for multiple instruments and batches)\n",
     "class PositionalEncoding(torch.nn.Module):\n",
@@ -177,15 +170,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tests for baseline transformer\n",
+    "To make sure things are working, let's see if we can get the model to overfit to a single instrument's\n",
+    "part in a single song (only the first 100 time steps)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "##### Tests for baseline transformer #####\n",
-    "# To make sure things are working, let's see if we can get the model to overfit to a single instrument's\n",
-    "# part in a single song (only the first 100 time steps)\n",
-    "\n",
     "ff_size = 512\n",
     "heads = 8\n",
     "attention_layers=  6\n",
@@ -323,6 +321,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Custom dataset class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -425,6 +430,13 @@
     "            \n",
     "    return sample"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
